--- a/package.json
+++ b/package.json
@@ -1,75 +1,84 @@
 {
-  "private": true,
-  "name": "openai-agents-js",
-  "version": "0.0.1",
+  "name": "@contract-ai-platform/core",
+  "version": "0.9.0",
+  "description": "Contract-Driven AI Platform - Treat agents like APIs with contracts, governance, and trust scores",
+  "keywords": ["ai", "agents", "orchestration", "contracts", "governance", "typescript"],
+  "author": "Contract-Driven AI Platform Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-org/contract-ai-platform.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-org/contract-ai-platform/issues"
+  },
+  "homepage": "https://github.com/your-org/contract-ai-platform#readme",
+  "type": "commonjs",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist", "examples", "docs"],
   "scripts": {
-    "clean": "tsc-multi --clean",
-    "prebuild": "pnpm -F @openai/* -r prebuild",
-    "build": "tsc-multi",
-    "postbuild": "pnpm -r -F @openai/* bundle",
-    "packages:dev": "tsc-multi --watch",
-    "docs:dev": "pnpm -F docs dev",
-    "docs:translate": "pnpm -F docs translate",
-    "docs:build": "pnpm -F docs build",
-    "docs:scripts:check": "pnpm exec tsc --pretty false --project docs/tsconfig.scripts.json",
-    "test": "CI=1 NODE_ENV=test vitest",
-    "test:coverage": "NODE_ENV=test vitest run --coverage",
-    "test:examples": "pnpm -r build-check",
-    "test:integration": "NODE_ENV=test vitest run --config=vitest.integration.config.ts",
-    "test:watch": "NODE_ENV=test vitest --watch",
-    "dev": "tsx scripts/dev.mts",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
-    "examples:basic": "pnpm -F basic start",
-    "examples:agents-as-tools": "pnpm -F agent-patterns start:agents-as-tools",
-    "examples:agents-as-tools-conditional": "pnpm -F agent-patterns start:agents-as-tools-conditional",
-    "examples:deterministic": "pnpm -F agent-patterns start:deterministic",
-    "examples:parallelization": "pnpm -F agent-patterns start:parallelization",
-    "examples:human-in-the-loop": "pnpm -F agent-patterns start:human-in-the-loop",
-    "examples:input-guardrails": "pnpm -F agent-patterns start:input-guardrails",
-    "examples:output-guardrails": "pnpm -F agent-patterns start:output-guardrails",
-    "examples:streamed": "pnpm -F agent-patterns start:streamed",
-    "examples:streamed:human-in-the-loop": "pnpm -F agent-patterns start:human-in-the-loop-stream",
-    "examples:routing": "pnpm -F agent-patterns start:routing",
-    "examples:customer-service": "pnpm -F customer-service start",
-    "examples:realtime-demo": "pnpm -F realtime-demo dev",
-    "examples:realtime-next": "pnpm -F realtime-next dev",
-    "examples:research-bot": "pnpm -F research-bot start",
-    "examples:financial-research-agent": "pnpm -F financial-research-agent start",
-    "examples:tools-computer-use": "pnpm -F tools start:computer-use",
-    "examples:tools-file-search": "pnpm -F tools start:file-search",
-    "examples:tools-web-search": "pnpm -F tools start:web-search",
-    "examples:tool-filter": "tsx examples/mcp/tool-filter-example.ts",
-    "ci:publish": "pnpm publish -r --no-git-checks",
-    "bump-version": "changeset version && pnpm -F @openai/* prebuild",
-    "prepare": "husky",
-    "clear:deps": "rm -rf node_modules && pnpm -r exec rm -rf node_modules",
-    "local-npm:reset": "rm -rf .cache/verdaccio/storage",
-    "local-npm:start": "verdaccio --config verdaccio-config.yml",
-    "local-npm:publish": "pnpm -r publish --registry http://localhost:4873 --force --no-git-checks"
+    "dev": "ts-node src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "orchestrate": "ts-node orchestrator/manifest-builder.ts",
+    "validate": "ts-node scripts/validate-agent.ts",
+    "setup-pinecone": "ts-node scripts/pinecone-setup.ts",
+    "search-enhancements": "ts-node scripts/search-enhancements.ts",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:integration": "vitest run --config vitest.integration.config.ts",
+    "test:env": "node scripts/test-env.js",
+    "dashboard": "ts-node src/monitoring-dashboard.ts",
+    "mcp:dev": "ts-node src/mcp-server.ts",
+    "mcp:build": "tsc src/mcp-server.ts",
+    "mcp:start": "node dist/mcp-server.js",
+    "knowledge:build-trainpack": "ts-node src/trainpack.builder.ts",
+    "knowledge:health-check": "ts-node scripts/health-check.ts",
+    "orchestrator": "ts-node src/orchestration/cli.ts",
+    "orchestrator:compile": "ts-node src/orchestration/cli.ts compile",
+    "orchestrator:validate": "ts-node src/orchestration/cli.ts validate",
+    "orchestrator:execute": "ts-node src/orchestration/cli.ts execute",
+    "orchestrator:examples": "ts-node src/orchestration/cli.ts examples",
+    "orchestrator:test": "ts-node src/orchestration/cli.ts test",
+    "orchestrator:status": "ts-node src/orchestration/cli.ts status",
+    "orchestrator:build": "tsc src/orchestration/orchestrator.ts",
+    "test:orchestrator": "vitest run src/orchestration/orchestrator.test.ts",
+    "examples:builder": "ts-node examples/builder-basic.ts",
+    "examples:orchestrator": "ts-node examples/orchestrator-basic.ts",
+    "examples:monitoring": "ts-node examples/monitoring-basic.ts",
+    "examples:social-media": "ts-node examples/social-media-agent.ts",
+    "examples:financial": "ts-node examples/financial-research.ts",
+    "examples": "echo 'Available examples: builder, orchestrator, monitoring, social-media, financial'",
+    "docs:dev": "cd docs && npm run dev",
+    "docs:build": "cd docs && npm run build",
+    "lint": "eslint src/**/*.ts examples/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts examples/**/*.ts --fix",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf dist coverage .nyc_output",
+    "prepublishOnly": "npm run clean && npm run build && npm test"
+  },
+  "dependencies": {
+    "@pinecone-database/pinecone": "^6.1.2",
+    "clsx": "^2.1.1",
+    "commander": "^12.1.0",
+    "express": "^4.19.2",
+    "fastify": "^4.28.1",
+    "js-yaml": "^4.1.0",
+    "ky": "^1.7.2",
+    "lucide-react": "^0.515.0",
+    "openai": "^6.7.0",
+    "openai-agents": "^1.1.0",
+    "react": "^18.2.0",
+    "tailwind-merge": "^2.5.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.29.7",
-    "@eslint/js": "^9.36.0",
-    "@types/node": "^22.16.3",
-    "@typescript-eslint/eslint-plugin": "^8.44.1",
-    "@typescript-eslint/parser": "^8.44.1",
-    "@vitest/coverage-v8": "^3.2.4",
-    "concurrently": "^9.2.1",
-    "eslint": "^9.36.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-unused-imports": "^4.2.0",
-    "execa": "^9.6.0",
-    "husky": "^9.1.7",
-    "playwright": "^1.55.1",
-    "prettier": "^3.6.2",
-    "rimraf": "^6.0.1",
-    "tsc-multi": "^1.1.0",
-    "tsx": "^4.20.5",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.44.1",
-    "verdaccio": "^6.1.6",
-    "vitest": "^3.2.4"
-  },
-  "packageManager": "pnpm@10.18.3"
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^20.19.23",
+    "@types/react": "^18.2.79",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
+    "vitest": "^2.0.5"
+  }
 }
